[package]
name = "slides"
version = "0.1.4"
authors = ["Eduard Knyshov <edvorg@gmail.com>"]
description = "Slides engine in rust"
edition = "2018"
repository = "https://github.com/edvorg/slides.rs"
license-file = "../LICENSE"

[dependencies]
yew = "0.4.0"
stdweb = "0.4.10"
stdweb-derive = "0.5.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"