[package]
name = "01_full_stack_web_development"
version = "0.1.4"
authors = ["Eduard Knyshov <edvorg@gmail.com>"]
description = "Full-Stack Web Development in Rust talk at Hong Kong Functional Programming meetup"
edition = "2018"

[dependencies]
slides = { path = "../../lib" }
yew = "0.4.0"
stdweb = "0.4.10"